[gd_scene load_steps=18 format=3 uid="uid://dbk6h0u8da2os"]

[ext_resource type="Script" path="res://Player Scripts/player.gd" id="1_w538t"]
[ext_resource type="Texture2D" uid="uid://b8bcvvl4l1fc2" path="res://Art/tileset/Mountain-Dusk.png" id="2_a4rl6"]
[ext_resource type="Script" path="res://State logic/state_machine.gd" id="2_i6uin"]
[ext_resource type="Texture2D" uid="uid://dtwatbnwnx7fk" path="res://Art/Player/Elementals_Leaf_ranger_Free_v1.0/animations/spritesheets/Elementals_leaf_ranger_288x128_SpriteSheet.png" id="2_rqi30"]
[ext_resource type="Script" path="res://Player Scripts/playerwalk.gd" id="3_f21pi"]
[ext_resource type="Script" path="res://Player Scripts/PlayerJump.gd" id="5_evyty"]
[ext_resource type="Script" path="res://Player Scripts/PlayerIdle.gd" id="6_etkn7"]
[ext_resource type="Script" path="res://Player Scripts/PlayerFall.gd" id="7_hjd5f"]
[ext_resource type="Script" path="res://Player Scripts/PlayerAttack.gd" id="9_liyli"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xi340"]
radius = 1.0
height = 4.8

[sub_resource type="Animation" id="Animation_5mne1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_bwwjk"]
resource_name = "attack"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 11), Vector2i(1, 11), Vector2i(2, 11), Vector2i(3, 11), Vector2i(4, 11), Vector2i(5, 11), Vector2i(6, 11), Vector2i(7, 11), Vector2i(8, 11), Vector2i(9, 11), Vector2i(10, 11), Vector2i(11, 11), Vector2i(12, 11), Vector2i(13, 11), Vector2i(14, 11)]
}

[sub_resource type="Animation" id="Animation_1782e"]
resource_name = "falling"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2), Vector2i(12, 2), Vector2i(13, 2), Vector2i(14, 2), Vector2i(15, 2), Vector2i(16, 2), Vector2i(17, 2)]
}

[sub_resource type="Animation" id="Animation_dcwoj"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0)]
}

[sub_resource type="Animation" id="Animation_ije58"]
resource_name = "jumping"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2)]
}

[sub_resource type="Animation" id="Animation_6koay"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1), Vector2i(9, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ay6c"]
_data = {
"RESET": SubResource("Animation_5mne1"),
"attack": SubResource("Animation_bwwjk"),
"falling": SubResource("Animation_1782e"),
"idle": SubResource("Animation_dcwoj"),
"jumping": SubResource("Animation_ije58"),
"walk": SubResource("Animation_6koay")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_w538t")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.589096, 0.589096, 0.589096, 1)
z_index = -10
texture_filter = 1
position = Vector2(-451, 201)
scale = Vector2(5, 5)
texture = ExtResource("2_a4rl6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(2, -40)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_rqi30")
hframes = 22
vframes = 17
frame = 22

[node name="State_Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_i6uin")
initial_state = NodePath("PlayerWalk")

[node name="PlayerWalk" type="Node" parent="State_Machine" node_paths=PackedStringArray("player")]
script = ExtResource("3_f21pi")
speed = 150.0
player = NodePath("../..")

[node name="PlayerJump" type="Node" parent="State_Machine" node_paths=PackedStringArray("player")]
script = ExtResource("5_evyty")
speed = 150.0
player = NodePath("../..")
jump_height = 75.0
jump_time_to_peak = 0.4
jump_time_to_descent = 0.3

[node name="PlayerIdle" type="Node" parent="State_Machine" node_paths=PackedStringArray("player")]
script = ExtResource("6_etkn7")
speed = 10.0
player = NodePath("../..")

[node name="PlayerFall" type="Node" parent="State_Machine" node_paths=PackedStringArray("player")]
script = ExtResource("7_hjd5f")
player = NodePath("../..")
jump_height = 75.0
jump_time_to_peak = 0.4
jump_time_to_descent = 0.4
amin_speed = 1.0

[node name="PlayerAttack" type="Node" parent="State_Machine" node_paths=PackedStringArray("player")]
script = ExtResource("9_liyli")
player = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -11)
scale = Vector2(7, 7)
shape = SubResource("CapsuleShape2D_xi340")

[node name="Camera2D2" type="Camera2D" parent="."]
offset = Vector2(0, -100)
zoom = Vector2(2, 2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=["animation_player"]]
libraries = {
"": SubResource("AnimationLibrary_5ay6c")
}

[node name="Marker2D" type="Marker2D" parent="." groups=["marker"]]
position = Vector2(1, -13)
